--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/lasp-lang/react-prototype#readme",
   "dependencies": {
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
     "immutable": "^3.8.1",
     "webpack": "^1.13.2"
   }
