--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "webpack": "^1.13.2"
+  },
+  "scripts": {
+    "dev": "webpack -d --watch",
+    "build" : "webpack -p"
   }
 }
